# 2024-BIT-

./: .gitignore  README.md
Client/PreProject/: ChildDoc.h  GlobalData.h  InsideDoc.h  Makefile  MedicineItem.h  PreProject.pro  PreProject.pro.user.ec71104  RegisterDataTransmit.h  SkinDoc.h  WomanDoc.h  applyfriend.cpp  applyfriend.h  audio.cpp  audio.h  audio.ui  authenfriend.cpp  authenfriend.h  basewindow.cpp  basewindow.h  basewindow.ui  bookwindow.cpp  bookwindow.ui  chatpage.cpp  chattingroomwindow.cpp  chattingroomwindow.h  chatwindow.cpp  chatwindow.h  chatwindow.ui  childwd.cpp  childwd.h  childwd.ui  clickedlabel.cpp  clickedlabel.h  client.cpp  common.h  drawer.cpp  drawer.h  global.h  homewindow.cpp  homewindow.h  (+112 more)
Client/build-PreProject-Desktop_Qt_5_12_12_GCC_64bit-Debug/: Makefile  audiofile  medicalitem.db  moc_BubbleFrame.cpp  moc_ChatItemBase.cpp  moc_ChatView.cpp  moc_MessageTextEdit.cpp  moc_PictureBubble.cpp  moc_TextBubble.cpp  moc_absence.cpp  moc_adduseritem.cpp  moc_advice.cpp  moc_applyfriend.cpp  moc_applyfrienditem.cpp  moc_applyfriendlist.cpp  moc_applyfriendpage.cpp  moc_audio.cpp  moc_authenfriend.cpp  moc_basewindow.cpp  moc_bookwindow.cpp  moc_buttondelegate.cpp  moc_change.cpp  moc_chatdialog.cpp  moc_chatpage.cpp  moc_chattingroomwindow.cpp  moc_chatuserlist.cpp  moc_chatuserwid.cpp  moc_chatwindow.cpp  moc_childwd.cpp  moc_clickedbtn.cpp  moc_clickedlabel.cpp  moc_clickedoncelabel.cpp  moc_client.cpp  moc_contactuserlist.cpp  moc_conuseritem.cpp  moc_customizeedit.cpp  moc_diagnostic.cpp  moc_drawer.cpp  moc_findfaildlg.cpp  moc_findsuccessdlg.cpp  (+106 more)
Client/docotor/: DataType.h  Health.pro  Health.pro.user.78ab447  PreProject.pro  PreProject.pro.user.5814c12  absence.cpp  absence.h  absence.ui  advice.cpp  advice.h  advice.ui  change.cpp  change.h  change.ui  circularbuf.cpp  circularbuf.h  clickedlabel.cpp  clickedlabel.h  client.h  client.ui  database.h  diagnostic.cpp  diagnostic.h  diagnostic.ui  display.cpp  display.h  display.ui  doctorDemo.qrc  drawer.cpp  drawer.h  global.cpp  global.h  guidemainwindow.cpp  guidemainwindow.h  guidemainwindow.ui  historydata.cpp  historydata.h  historydata.ui  hmainwindow.cpp  hmainwindow.h  (+61 more)
PMainWindow/: GlobalData.h  Makefile  OutDoc.h  PMainWindow.pro  bookwindow.h  chattingroomwindow.ui  homewindow.ui  insidewd.h  main.cpp  medicalcaseswd.ui  medicalexpensewd.cpp  medicalexpensewd.h  medicalitem.db  medicinesearchwindow.cpp  medicinesearchwindow.h  moc_bookwindow.cpp  moc_childwd.cpp  moc_homewindow.cpp  moc_insidewd.cpp  moc_medicalexpensewd.cpp  moc_personalinfowindow.cpp  moc_quizwd.cpp  moc_skinwd.cpp  pmainwindow.cpp  pmainwindow.h  pmainwindowhome.cpp  quizwd.h  skinwd.cpp  ui_bookwindow.h  ui_personalwindow.h  ui_pmainwindowhome.h  ui_skinwd.h  womanwd.cpp  womanwd.h
Server/GataServer/: AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  CServer.h  Config.cpp  Config.h  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  Singleton.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h  main.cpp  message.proto
Server/NewstatusServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  ChatGrpcClient.cpp  ChatGrpcClient.h  ConfigMgr.cpp  ConfigMgr.h  MysqlDao.h  (+11 more)
Server/statusServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  ChatGrpcClient.cpp  ChatGrpcClient.h  ConfigMgr.cpp  ConfigMgr.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  Singleton.h  StatusServiceImpl.cpp  StatusServiceImpl.h  const.h  main.cpp
(+71 files in other folders)
